--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
                                 <div class="head">E-mail</div>
 
-                                <div class="sub-title">guidrop17@gmail.com</div>
+                                <div class="sub-title">guiaraujo.dev@gmail.com</div>
 
                             </div>
 
