--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                         <div class="text">Web Developer</div>
 
-                        <p>Atuo na criação Fron-end web, ultilizando HTML, CSS, Js</p>
+                        <p>Atuo na criação Front-end web, ultilizando HTML, CSS, Js</p>
 
                     </div>
 
