--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
                     <p>Aprendendo na prática sobre HTML, CSS, JS, Bootstrap, ES6, PHP, MySQL, jQuery, SASS, IONIC e WordPress.</p>
 
-                    <a href="#">Saiba mais</a>
+                    <a href="https://drive.google.com/file/d/19O4d4cxb3A9mkyeKKvLmCPq_1lsiA7YM/view?usp=sharing">Certificados</a>
 
                 </div>
 
