--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                 <div class="column right">
 
-                    <div class="text">Guilherme, atuo como <span class="typing-2"></span></div>
+                    <div class="text">Sou o Guilherme, sou <span class="typing-2"></span></div>
 
                     <p>Sou imperativo, organizado, comunicativo e curioso por novas tecnologias e tudo aquilo que me deixe ansioso para aprender mais. Adoro esportes, conhecer, aprender e explorar novas pessoas, lugares e ideias.</p>
 
