--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-
+ 
 </head>
 
 <body>
@@ -94,7 +92,7 @@
 
                 <div class="column right">
 
-                    <div class="text">Sou o Guilherme, sou <span class="typing-2"></span></div>
+                    <div class="text">Guilherme <span class="typing-2"></span></div>
 
                     <p>Sou imperativo, organizado, comunicativo e curioso por novas tecnologias e tudo aquilo que me deixe ansioso para aprender mais. Adoro esportes, conhecer, aprender e explorar novas pessoas, lugares e ideias.</p>
 
