--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                     <p>Sou imperativo, organizado, comunicativo e curioso por novas tecnologias e tudo aquilo que me deixe ansioso para aprender mais. Adoro esportes, conhecer, aprender e explorar novas pessoas, lugares e ideias.</p>
 
-                    <a href="">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1zzhBvNmRxzQkotJOAAa8tEimosEsRSOV/view?usp=sharing">Download CV</a>
 
                 </div>
 
