--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
                     <div class="text">Habilidades e Experiências</div>
 
-                    <p>Aprendendo na prática sobre HTML, CSS, JS, Bootstrap, ES6, PHP, MySQL, jQuery, SASS, IONIC e WordPress.</p>
+                    <p>Aprendendo na prática sobre HTML, CSS, JS, Bootstrap, ES6, PHP, SQL, Node, SASS, Typescript, API, React Native, ReactJs, Git, GitHub, Logica de Progrmção e WordPress.</p>
 
                     <a href="https://drive.google.com/file/d/11eLakvs6h0Q6-2blUfIEe0mBo56YsMde/view?usp=sharing">Certificados</a>
 
