--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
                         <div class="info">
 
-                            <span>PHP</span>
+                            <span>Bootstrap</span>
 
                             <span>50%</span>
 
@@ -245,7 +245,7 @@
 
                         <div class="info">
 
-                            <span>MySQL</span>
+                            <span>React</span>
 
                             <span>50%</span>
 
