--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="max-width">
 
-            <div class="logo"><a href="#"><img src="/img/logo4.png" alt="logo"></a></div>
+            <div class="logo"><a href="#"><img src="./img/logo4.png" alt="logo"></a></div>
 
             <ul class="menu">
 
@@ -85,7 +85,7 @@
 
                 <div class="column left">
 
-                    <img src="img/perfil.jpg" alt="">
+                    <img src="./img/perfil.jpg" alt="Foto de Perfil">
 
                 </div>
 
