--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                         <div class="text">Web Developer</div>
 
-                        <p>Atuo na criação Front-end web, ultilizando HTML, CSS, Js</p>
+                        <p>Atuo na criação Front-end web, ultilizando React.JS</p>
 
                     </div>
 
@@ -177,9 +177,9 @@
 
                     <div class="text">Habilidades e Experiências</div>
 
-                    <p>Aprendendo na prática sobre HTML, CSS, JS, Bootstrap, ES6, SQL, Node, Typescript, API, React Native, ReactJs, Git, GitHub, Logica de Programação.</p>
+                    <p>Aprendendo na prática sobre HTML, CSS, JS, Bootstrap, ReactJs, ES6, Redux, Context, Typescript, Rest API, Git, GitHub, C# e .Net.</p>
 
-                    <a href="https://drive.google.com/file/d/11eLakvs6h0Q6-2blUfIEe0mBo56YsMde/view?usp=sharing" target="_blank">Certificados</a>
+                    <a href="https://drive.google.com/file/d/1zzhBvNmRxzQkotJOAAa8tEimosEsRSOV/view?usp=sharing" target="_blank">Certificados</a>
 
                 </div>
 
@@ -226,6 +226,20 @@
                         <div class="line js"></div>
 
                     </div>
+                    
+                    <div class="bars">
+
+                        <div class="info">
+
+                            <span>React</span>
+
+                            <span>50%</span>
+
+                        </div>
+
+                        <div class="line react"></div>
+
+                    </div>
 
                     <div class="bars">
 
@@ -237,21 +251,7 @@
 
                         </div>
 
-                        <div class="line php"></div>
-
-                    </div>
-
-                    <div class="bars">
-
-                        <div class="info">
-
-                            <span>React</span>
-
-                            <span>50%</span>
-
-                        </div>
-
-                        <div class="line mysql"></div>
+                        <div class="line Bootstrap"></div>
 
                     </div>
 
@@ -263,7 +263,7 @@
 
     </section>
 
-    <!-- contact section start -->
+    
     <section class="contact" id="contact">
 
         <div class="max-width">
@@ -316,7 +316,7 @@
 
                                 <div class="head">E-mail</div>
 
-                                <div class="sub-title">guiaraujo.dev@gmail.com</div>
+                                <div class="sub-title">guidrop17@gmail.com</div>
 
                             </div>
 
