--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
                             <span>JavaScript</span>
 
-                            <span>70%</span>
+                            <span>60%</span>
 
                         </div>
 
@@ -233,7 +233,7 @@
 
                             <span>React</span>
 
-                            <span>50%</span>
+                            <span>60%</span>
 
                         </div>
 
@@ -251,7 +251,7 @@
 
                         </div>
 
-                        <div class="line Bootstrap"></div>
+                        <div class="line bootstrap"></div>
 
                     </div>
 
